# custom_visual_odometry_AR

./: .gitignore  CMakeLists.txt  LICENSE  README.md  default.xml  table.xml
data/: SamsungNote3_720.xml
src/: AURTracker.cpp  AURTracker.h  CubeMesh.cpp  CubeMesh.h  RunTime.cpp  RunTime.h  VideoSource.cpp  VideoSource.h  main.cpp  util.cpp  util.h
